narrower nearby galleries on small screens - fixes #43

--- a/sass/views/_galleriesnearby.scss
+++ b/sass/views/_galleriesnearby.scss
@@ -7,7 +7,7 @@
       width: 14em;
     }
 
-    @include breakpoint($laptop) {
+    @include breakpoint($desktop) {
       width: 15em;
     }
     
